src/style.scss
/* ... */
h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: $font-secondary;
	font-weight: 600;
}

// Site Header, to include the top of the stage curtains
.site-header {

	.site & {
		background-image: none;
		background-color: $brand-secondary;

		@media (min-width: $screen-sm-min) {
			background-color: $brand-primary-light;
		}

	}

	h1,
	h2 {
		text-transform: uppercase;
	}

	h1 {
		height: 3.5rem;
		margin: 0 auto;
		font-size: 0;
		padding: 0;
		font-weight: 300;
		font-variant: normal;
		font-style: normal;
		font-family: $font-logo;

		&::before {
			content: "WordCamp ";
			color: $logo;
		}

		&::after {
			content: "London 2017";
		}

		&::before,
		&::after {
			font-size: 1.5rem;

			@media (min-width: $screen-sm-min) {
				font-size: 1.75rem;
			}

			@media (min-width: $screen-md-min) {
				font-size: 2.75rem;
			}

		}
	}

	h2 {
		font-weight: 400;
		font-variant: normal;
		font-style: normal;
		font-size: 1rem;
		font-family: $font-logo;
		color: $white;

		// This needs to be done to ensure the date shows on mobile
		clip: initial;
		position: relative;

		@media (min-width: $screen-md-min) {
			font-size: 1.5rem;
		}

		@media (min-width: $screen-lg-min) {
			font-size: 1.75rem;
		}

	}

	.home-link {
		position: relative;
		background-color: transparent;
		max-width: none;
		text-align: center;
		z-index: 1;
		padding: 20px;
		color: $white;

		&::before {
			content: "";
			position: relative;
			display: inline-block;
			width: 60px;
			height: 60px;
			margin: 0 auto 10px;
			background-image: url(#{$assets-url}/images/wordcamp-website-logo-002.png);
			background-repeat: no-repeat;
			background-size: 100%;

			@media (min-width: $screen-sm-min) {
				margin-top: 70px;
				margin-bottom: 0;
			}

			@media (min-width: $screen-md-min) {
				margin-top: 60px;
			}

			@media (min-width: $screen-lg-min) {
				margin-top: 45px;
				width: 70px;
				height: 70px;
			}

			@media (min-width: $screen-xl-min) {
				margin-top: 35px;
			}

		}
	}

	// Hiding the search in the navigation bar, as it will be included in the sidebar instead.
	.search-form {
		display: none;
	}

	// Override overly specific TwentyThirteen styles
	.skip-link.skip-link:focus {
		color: $brand-primary;
		top: -2px;
	}

	.menu-toggle {
		color: $white;
	}

	.navbar {
		position: relative;
		padding-top: 5px;
		padding-bottom: 5px;
		background-color: $brand-dark;

		a {
			color: $white;
			text-transform: uppercase;
		}

	}

	.nav-menu {
		padding: 0;
		text-align: center;
	}

	// The curtain tops are currently only set to display on larger screen sizes.
	@media (min-width: $screen-sm-min) {

		// Set the left and right curtains
		&::before,
		&::after {
			content: "";
			position: absolute;
			top: 0;
			display: block;
			height: 240px;
			width: 600px;
			background-size: 100%;
			background-repeat: no-repeat;
			z-index: 2;
		}

		&::before {
			left: 0;
			background-image: url(#{$assets-url}/images/curtain-left-no-shadow-001.png);
		}

		&::after {
			right: 0;
			background-image: url(#{$assets-url}/images/curtain-right-no-shadow-001.png);
		}

		// Now that we are showing the curtain tops, we need to tuck the navigation underneath them
		.navbar {
			position: relative;
			margin-top: -20px;
			padding-top: 25px;
		}

		// And prevent the navigation links from spreading underneath the curtain tops.
		.main-navigation {
			max-width: none;
			padding-left: 160px;
			padding-right: 160px;
		}

		// And lastly we need to set a background to show inbetween the curtain tops
		.home-link {

			padding: 0 20px;

			&::after {
				content: "";
				position: absolute;
				top: 0;
				right: 60px;
				bottom: 0;
				left: 60px;
				display: block;
				background-color: $brand-secondary;
				z-index: -1;
			}

		}

		// Change the curtain tops out for those with a shadow now that we have more room
		@media (min-width: $screen-lg-min) {
			&::before {
				background-image: url(#{$assets-url}/images/curtain-left-002.png);
			}

			&::after {
				background-image: url(#{$assets-url}/images/curtain-right-002.png);
			}
		}

	}

}

// Main page container
.site {

	border: 0;

	// Showing the curtains
	@media (min-width: $screen-md-min) {

		.site-main {

			padding: 0 160px;

			&::before,
			&::after {
				content: "";
				position: absolute;
				top: 0;
				bottom: 0;
				display: block;
				width: 165px;
				background-size: 100%;
				background-repeat: repeat-y;
			}

			&::before {
				left: 0;
				background-image: url(#{$assets-url}/images/curtain-drape-left-002.png);
			}

			&::after {
				right: 0;
				background-image: url(#{$assets-url}/images/curtain-drape-right-002.png);
			}

		}

		.site-footer {

			position: relative;

			&::before,
			&::after {
				content: "";
				position: absolute;
				top: 0;
				bottom: 0;
				display: block;
				width: 165px;
				background-size: 100%;
				background-repeat: repeat-y;
			}

			&::before {
				left: 0;
				background-image: url(#{$assets-url}/images/curtain-bottom-left-002.png);
				background-repeat: no-repeat;
			}

			&::after {
				right: 0;
				background-image: url(#{$assets-url}/images/curtain-bottom-right-002.png);
				background-repeat: no-repeat;
			}

		}

	}

	.entry-title {
		font-weight: 600;
	}

}

// Styling the peculiar sidebar in the theme..
.site-main {

	.sidebar-container {
		left: 0;
		right: 0;
	}

	.sidebar-inner {
		max-width: none;

		@media (min-width: $screen-md-min) {
			padding: 0 180px;
		}

		.widget-area {
			margin-right: 0;

			@media (min-width: $screen-lg-min) {
				margin-right: 40px;
			}

			@media (min-width: $screen-xxl-min) {
				margin-right: 60px;
			}

		}

	}

	.widget-title {
		font-family: $font-secondary;
	}

}

.sidebar .entry-header,
.sidebar .entry-content,
.sidebar .entry-summary,
.sidebar .entry-meta {

	@media (min-width: $screen-lg-min) {
		padding-left: 20px;
	}

}

.entry-content a .alignright,
.entry-content .wp-caption.alignright, {
	margin-right: 0;
}
/* ... */

